# Turbo-DA

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-monitoring.yml  docker-compose-test.yml  docker-compose.yml  dump.rdb
.github/workflows/: development-release.yml  lens-deployment.yml  mainnet-deployment.yml  mainnet-release.yml  release.yml  staging-release.yml
avail/: Cargo.toml
avail/src/: commitment_gen.rs  lib.rs  retrieve_data.rs  submit_data.rs
contracts/: .gitignore  foundry.toml
contracts/cache/: solidity-files-cache.json
contracts/script/: TurboDAResolver.s.sol
contracts/script/mocks/: DeployMockERC20.sol
contracts/src/: Create2.sol  TurboDAResolver.sol
contracts/src/mocks/: ERC20.sol
contracts/test/: TurboDAResolver.t.sol  UpgradeabiltyTest.sol
dashboard/: .env.example  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
dashboard/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/components/: apikeytable.tsx  balancetable.tsx  credit.tsx  dashboardtabs.tsx  header.tsx  loading.tsx  tokenselector.tsx  transactiontable.tsx  transfercard.tsx  updateappid.tsx
dashboard/components/ui/: copysession.tsx  nodata.tsx  table.tsx  tabs.tsx
dashboard/constants/: contracts.ts
dashboard/hooks/: useTransactions.tsx  useTransfers.tsx  useUserInfo.tsx  useWallet.tsx
dashboard/lib/: logger.ts  services.ts  types.ts  utils.ts
dashboard/public/: credit-added.lottie  turbo_during_meditation.lottie  turbo_on_wallet.lottie
dashboard/public/avatar/: Avatar 1.lottie  Avatar 10.lottie  Avatar 2.lottie  Avatar 3.lottie  Avatar 4.lottie  Avatar 5.lottie  Avatar 6.lottie  Avatar 7.lottie  Avatar 8.lottie  Avatar 9.lottie
dashboard/src/: middleware.ts
dashboard/src/actions/: country-update.ts
dashboard/src/app/: client-providers.tsx  fonts.ts  globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/src/components/: apikeytable.tsx  app-item.tsx  app-list.tsx  apps-card.tsx  assign-credits.tsx  balancetable.tsx  buy-credit-cards.tsx  clerk-wrapper.tsx  country-block-check.tsx  create-app.tsx  credit-balance.tsx  credit-usage.tsx  credit.tsx  credits-added.tsx  credits-transaction-progress.tsx  dashboard-wrapper.tsx  dashboardtabs.tsx  delete-app-alert.tsx  delete-key-alert.tsx  discount-eligibility.tsx  footer.tsx  header.tsx  reclaim-credits.tsx  switch-description.tsx  switch-main-balance-alert.tsx  tokenselector.tsx  transactiontable.tsx  transfercard.tsx  updateappid.tsx  view-keys.tsx
dashboard/src/config/: default.ts  walletConfig.ts
dashboard/src/constants/: availTokenAbi.json  transaction.ts  wagmi.ts
dashboard/src/hooks/: useApiKeys.tsx  useApp.ts  useBalance.ts  useDesiredChain.ts  (+7 more)
dashboard/store/: common.ts
dashboard/utils/: toasts.tsx  utils.ts
data_submission/: .env.example  Cargo.toml  README.md  dump.rdb
data_submission/src/: auth.rs  config.rs  lib.rs  main.rs  rate_limiter.rs  redis.rs  utils.rs
data_submission/src/avail/: retrieve_data.rs  submit_data.rs
data_submission/src/db/: customer_expenditure.rs  mod.rs  users.rs
data_submission/src/encipher/: avail_client.rs  mod.rs  types.rs
data_submission/src/routes/: data_retrieval.rs  data_submission.rs  health.rs  mod.rs
data_submission/src/workload_scheduler/: common.rs  consumer.rs
db/: Cargo.toml  config.example.json  migration.sh
db/migrations/2024-07-10-114437_create_users/: up.sql
db/migrations/2024-07-11-075344_create_customer_balances/: down.sql  up.sql
db/migrations/2024-07-20-133042_create_customer_data_volume/: down.sql  up.sql
db/migrations/2024-07-29-130954_create_find/: down.sql  up.sql
db/migrations/2024-08-15-070136_create_admin/: up.sql
db/migrations/2024-08-16-111815_failed_transactions/: down.sql  up.sql
db/migrations/2024-12-12-131810_nonce/: down.sql  up.sql
db/migrations/2024-12-12-191020_indexer_block_numbers/: down.sql  up.sql
db/migrations/2025-01-29-213618_api/: down.sql  up.sql
db/migrations/2025-04-23-124551_accounts/: down.sql  up.sql
db/migrations/2025-04-23-132914_multiaccount/: down.sql  up.sql
db/migrations/2025-08-29-203512_alteration2/: down.sql  up.sql
db/migrations/2025-09-03-172912_v1.5/: down.sql  up.sql
db/migrations/2025-10-27-124426_enigma/: up.sql
db/src/: errors.rs  lib.rs  schema.rs
db/src/controllers/: accounts.rs  api_keys.rs  apps.rs  credit_balance.rs  customer_expenditure.rs  fund.rs  misc.rs  mod.rs  users.rs
db/src/models/: accounts.rs  api.rs  apps.rs  credit_requests.rs  customer_expenditure.rs  fund.rs  indexer.rs  mod.rs  signer_nonce.rs  token_balances.rs  user_model.rs
enigma/: Cargo.toml
enigma/src/: lib.rs  types.rs
fallback_monitor/: .env.example  Cargo.toml  README.md  dump.rdb
fallback_monitor/src/: config.rs  main.rs
fallback_monitor/src/db/: customer_expenditure.rs  users.rs
fallback_monitor/src/monitor/: mod.rs  monitor.rs
funds_monitor/: .env.example  Cargo.toml  config.example.toml
funds_monitor/src/: avail.rs  config.rs  evm.rs  main.rs  utils.rs
observability/: Cargo.toml
observability/config/: otel-collector-config.yaml
observability/src/: lib.rs  oltp.rs
turbo-da-core/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml.example  diesel.toml  dump.rdb  public_key.pem  whitelist.json
turbo-da-core/src/: auth.rs  config.rs  lib.rs  logger.rs  main.rs  s3.rs  store.rs  utils.rs  whitelist.rs
turbo-da-core/src/avail/: mod.rs  retrieve_data.rs  submit_data.rs
turbo-da-core/src/controllers/: credit_balance.rs  customer_expenditure.rs  file.rs  fund.rs  kyc.rs  misc.rs  mod.rs  test.rs  token_balances.rs  users.rs
turbo-da-core/src/db/: customer_expenditure.rs  mod.rs  token_balances.rs  users.rs
turbo-da-core/src/routes/: data_retrieval.rs  data_submission.rs  health.rs
turbo-da-core/src/src/: config.rs  main.rs
turbo-da-core/src/src/db/: customer_expenditure.rs  mod.rs
turbo-da-core/src/src/monitor/: monitor.rs
turbo-da-core/src/workload_scheduler/: common.rs  consumer.rs  mod.rs
(+149 files in other folders)
