
[workspace]
members = [
    "db",
    "turbo-da-core",
    "funds_monitor",
    "observability",
    "fallback_monitor", 
    "data_submission", 
    "avail",
    "enigma"]
resolver = "2"

[workspace.dependencies]
actix-web = "4.8"
actix-cors = "0.7"
anyhow = "1.0.97"
hex = "0.4"
dotenv = "0.15"
sha3 = "0.10.8"
redis = { version = "0.28.2", features = ["r2d2"]}
bcrypt = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
rand = "0.8.5"
env_logger = "0.10"
avail-rust = { package = "avail-rust-client", version = "0.4.0", default-features = false, features = ["native", "reqwest"] }
tokio = { version = "1", features = ["full"] }
uuid = {version = "=1.8.0" , features = ["v4","fast-rng","macro-diagnostics", "serde"]}
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
futures = "0.3"
bigdecimal = { version = "0.4.6", features = ["serde"] }
actix-extensible-rate-limit = {version = "0.4.0", features=["redis"]}
diesel = { version = "2.2.0", features = ["serde_json", "postgres", "numeric", "uuid", "chrono"] }
toml = {version ="0.8.19"}
password-hash = {version = "0.5.0"}
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
console-subscriber = "0.4.0"
tracing-appender = "0.2.2"
tracing-opentelemetry = "0.23.0"
opentelemetry = "0.22.0"
opentelemetry-otlp = "0.15.0"
opentelemetry_sdk = "0.22.1"
