[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["serde_json", "postgres", "numeric", "uuid", "chrono"] }
bigdecimal = { version = "0.4.6",  features = ["serde"] }
chrono = { version = "0.4", features=["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "=1.8.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
dotenv = "0.15.0"
diesel-async.workspace = true
log.workspace = true
serde_json.workspace = true
avail-utils = { path = "../avail"}
enigma = {path = "../enigma"}
