[package]
name = "fallback_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["serde_json", "postgres", "numeric", "uuid", "chrono"] }
bigdecimal = { version = "0.4.6", features = ["serde"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
env_logger = "0.10"
uuid.workspace = true
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features=["serde"] }
lazy_static = "1.4"
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
futures = "0.3"
cron = { version = "0.8" }
toml = {version ="0.8.19"}
avail-rust = { workspace = true }
db = {path = "../db" }
turbo-da-core = {path= "../turbo-da-core"}
reqwest = "0.12.9"
data_submission = {path = "../data_submission"}
observability = { path = "../observability" }

