[package]
name = "funds_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.7.2", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
futures-util = "0.3"
diesel = { version = "2.2.0", features = ["serde_json", "postgres", "numeric", "uuid", "chrono"] }
bigdecimal = { version = "0.4.6",  features = ["serde"] }
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
chrono = { version = "0.4", features=["serde"] }
db = { path = "../db"}
hex = "0.4.3"
turbo-da-core = {path= "../turbo-da-core"}
reqwest = { version = "0.12.9", features = ["blocking", "json"] }