[package]
name = "observability"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry-otlp = { workspace = true, features = ["metrics"] }
opentelemetry_sdk = { workspace = true, features = ["metrics", "rt-tokio"] }
serde = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
dotenv = { workspace = true }
tracing-subscriber = { version = "0.3", features = [ "json", "fmt", "registry", "env-filter" ] }
tracing = { workspace = true }
