[package]
name = "turbo-da-core"
version = "0.1.0"
edition = "2021"

[features]
permissioned=[]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { workspace = true }
bigdecimal = { workspace = true }
dotenv = { workspace = true }
alloy = { version = "0.7.2", features = ["full"] }
actix-web = { workspace = true }
actix-cors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
unicode-normalization = "=0.1.22"
avail-rust = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
validator = { version = "0.16", features = ["derive"] }
num-bigint = "0.4"
jsonwebtoken = "9"
chrono = { version = "0.4", features=["serde"] }
thiserror = "1.0"
lazy_static = "1.4"
bcrypt = {workspace = true}
sha3 = {workspace = true}
diesel-async = { workspace = true }
futures = { workspace = true }
threadpool = "1.8"
crossbeam-channel = "0.5.13"
worker = "0.3.3"
redis = {workspace = true}
rayon = "1.10.0"
hex = { workspace = true }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
cron = { version = "0.8", optional = true }
toml = { workspace = true }
confy = {version = "0.3.1"}
db = {path = "../db" }
rand = {workspace = true}
actix-extensible-rate-limit = { workspace = true }

[dev-dependencies]
actix-http = "3.9.0"
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
