[package]
name = "turbo-da-core"
version = "0.1.0"
edition = "2021"

[features]
permissioned=[]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { workspace = true }
bigdecimal = { workspace = true }
dotenv = { workspace = true }
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.4.0", features = ["rt-tokio"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
alloy = { version = "0.7.2", features = ["full"] }
clerk-rs = { version = "0.4.0", features = ["actix"] }
actix-multipart = "0.6.1"
actix-web = { workspace = true }
actix-cors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
unicode-normalization = "=0.1.22"
avail-rust = { workspace = true }
tokio = { workspace = true , features=["fs"] }
uuid = { workspace = true }
validator = { version = "0.16", features = ["derive"] }
num-bigint = "0.4"
jsonwebtoken = "9"
chrono = { version = "0.4", features=["serde"] }
thiserror = {workspace = true } 
lazy_static = "1.4"
bcrypt = { workspace = true }
sha3 = {workspace = true}
diesel-async = { workspace = true }
futures = { workspace = true }
threadpool = "1.8"
crossbeam-channel = "0.5.13"
worker = "0.3.3"
redis = {workspace = true}
rayon = "1.10.0"
hex = { workspace = true }
reqwest = { workspace = true }
cron = { version = "0.8", optional = true }
toml = { workspace = true }
confy = {version = "0.3.1"}
db = {path = "../db" }
observability = { path = "../observability" }
rand = {workspace = true}
actix-extensible-rate-limit = { workspace = true }
tracing = {workspace=true}

[dev-dependencies]
actix-http = "3.9.0"
diesel_migrations = { version = "2.1.0", features = ["postgres"] }

